deploy/k8s/central-end-user-registry-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: central-end-user-registry
  labels:
    app: central-end-user-registry
spec:
  ports:
    - port: 3001
      targetPort: 3001
      name: http-api-and-tcp-websocket
      protocol: TCP
  selector:
    app: central-end-user-registry
